# join-gate-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
cogs/: join_gate.py
config/: config.example.toml  database.pgsql
utils/: __init__.py
